--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Windows Preload Mask Start -->
   	<div id="window_preload_mask">
   		<div class="central-vh">
-  			We are Loading...
+  			keep calm and food is coming...
   		</div>
   	</div>	
   <!-- Windows Preload Mask End -->
