--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 				<div class="row">
 			    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<h5 class="text-center">
-				   			ⓒ Copyright 2015 by Eudora. All rights reserved
+				   			&copy Copyright 2015 by Eudora. All rights reserved
 						</h5>
 			    	</div>
 			    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
